--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_svg: ^2.0.15
   sizer: ^3.0.4
-  desktop_window: ^0.4.2
+  desktop_window: 
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  shared_preferences: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
