--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -35,7 +35,7 @@
 	<string>NSApplication</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.example.prachi_desktop_app</string>
+		<string>group.com.prachi_desktop_app</string>
 	</array>
 </dict>
 </plist>
