--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.example.prachi_desktop_app</string>
+		<string>$(AppIdentifierPrefix)com.prachi_desktop_app</string>
 	</array>
 </dict>
 </plist>
